syntax = "proto3";
package sprinkles.v1;

import "sprinkles/v1/types.proto";
import "sprinkles/v1/enums.proto";

// Do not delete these unless you know what you're doing
message Empty {};
message ListRequest {
  int32 limit = 1;
  int32 offset = 2;
  string orderBy = 3;
}
message DeleteRequest {
  repeated string ids = 1;
}
message DeleteResponse {
  repeated string errors = 1;
}
message GetRequest {
  repeated string ids = 1;
}

// Below here are the messages that aren't generic
message Hellos {
  repeated Hello hellos = 1;
}

message UpsertHellosRequest {
  repeated Hello hellos = 1;
  repeated string fields = 2;
}
message OptionDefinitions {
  repeated OptionDefinition option_definitions = 1;
}

message UpsertOptionDefinitionsRequest {
  repeated OptionDefinition option_definitions = 1;
  repeated string fields = 2;
}
message OptionOverrides {
  repeated OptionOverride option_overrides = 1;
}

message UpsertOptionOverridesRequest {
  repeated OptionOverride option_overrides = 1;
  repeated string fields = 2;
}

message OptionGroupRequest {
  repeated string groups = 1;
}

message OptionValueRequest {
  string name = 1;
  repeated string ignore_groups = 2 [json_name = "ignore_groups"];
}

message OptionValueResponse {
  string option_value = 1 [json_name = "option_value"];
}